--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile-computing-express-app",
+  "name": "auth0-express-webapp-sample",
   "scripts": {},
   "dependencies": {
     "auth0": "^4.0.1",
@@ -13,6 +13,7 @@
     "http-errors": "~1.8.1",
     "morgan": "~1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "request": "^2.88.2",
     "sqlite3": "^5.1.6"
   }
